--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 }
 
 .details {
-  margin: 15px 0px 20px 0px;
+  margin: 15px 0px 0px 0px;
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -35,6 +35,7 @@
   background-color: #eee;
 }
 
-/* .list-group {
+.slider-container {
   margin: auto;
-} */
+  margin-bottom: 20px;
+}
