--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 }
 
 #search-container {
-  padding: 20px;
+  padding-bottom: 20px;
   background-color: white;
 }
 
@@ -46,6 +46,6 @@
 }
 
 .slider-container {
-  margin: auto;
-  margin-bottom: 20px;
+  /* margin: auto; */
+  margin: 10px 0px 10px 0px;
 }
