--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,8 @@
   /* margin: auto; */
   margin: 10px 0px 10px 0px;
 }
+
+.video-controls {
+  text-align: center;
+  margin: 10px 0px 20px 0px;
+}
